--- a/config/reviung41.conf
+++ b/config/reviung41.conf
@@ -5,3 +5,5 @@
 #CONFIG_WS2812_STRIP=y
 #CONFIG_ZMK_USB_LOGGING=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=60000
